--- a/app/src/main/res/layout/artists_list.xml
+++ b/app/src/main/res/layout/artists_list.xml
@@ -22,7 +22,7 @@
     <TextView
         android:text="Name Artist"
         android:id="@+id/Name"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="17dp"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
@@ -35,7 +35,7 @@
         android:text="Genres"
         android:id="@+id/Genres"
         android:layout_gravity="fill_horizontal"
-        android:textColor="#b7b7b7"
+        android:textColor="@color/grey"
         android:textSize="16dp"
         android:phoneNumber="false"
         android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
     <TextView
         android:text="Albums and songs"
         android:id="@+id/Albums"
-        android:textColor="#b7b7b7"
+        android:textColor="@color/grey"
         android:textSize="16dp"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
