--- a/app/src/main/res/layout/activity_more_about.xml
+++ b/app/src/main/res/layout/activity_more_about.xml
@@ -3,65 +3,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.dravgames.vadim.musicartists.MoreAbout">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context="com.dravgames.vadim.musicartists.MoreAbout">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/bigImage"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:cropToPadding="false"
-            android:scaleType="centerCrop"
-            android:layout_centerHorizontal="true" />
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/bigImage"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
+            <ImageView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="genres"
-                android:id="@+id/genresTxt"
-                android:layout_below="@+id/imageView2"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:textColor="@color/grey" />
+                android:id="@+id/bigImage"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:cropToPadding="false"
+                android:scaleType="centerCrop"
+                android:layout_centerHorizontal="true"
+                android:onClick="openWebLink"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Albums and tracks"
-                android:id="@+id/albumsTxt"
-                android:paddingTop="10dp"
-                android:textColor="@color/grey" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/bigImage"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/biografy_title_txt"
-                android:paddingTop="10dp"
-                android:textColor="@color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="genres"
+                    android:id="@+id/genresTxt"
+                    android:layout_below="@+id/imageView2"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:textColor="@color/grey" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Text"
-                android:id="@+id/biografyTxtInfo"
-                android:paddingTop="10dp"
-                android:textColor="@color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Albums and tracks"
+                    android:id="@+id/albumsTxt"
+                    android:paddingTop="10dp"
+                    android:textColor="@color/grey" />
 
-        </LinearLayout>
-</RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/biografy_title_txt"
+                    android:paddingTop="10dp"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:id="@+id/biografyTxtInfo"
+                    android:paddingTop="10dp"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
